--- a/paint/mainwindow.ui
+++ b/paint/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>992</width>
+    <width>800</width>
     <height>600</height>
    </rect>
   </property>
@@ -17,14 +17,14 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>780</x>
-      <y>90</y>
-      <width>181</width>
-      <height>31</height>
+      <x>30</x>
+      <y>50</y>
+      <width>231</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
-     <string>Пуск</string>
+     <string>Прямоугольник</string>
     </property>
    </widget>
   </widget>
@@ -33,7 +33,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>992</width>
+     <width>800</width>
      <height>27</height>
     </rect>
    </property>
