Удален лишний директорий

--- a/paint30/mainwindow.ui
+++ b/paint30/mainwindow.ui
@@ -17,18 +17,18 @@
    <widget class="QGraphicsView" name="graphicsView">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>20</y>
-      <width>521</width>
-      <height>501</height>
+      <x>40</x>
+      <y>50</y>
+      <width>511</width>
+      <height>441</height>
      </rect>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>50</y>
+      <x>610</x>
+      <y>130</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -40,8 +40,8 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>590</x>
-      <y>100</y>
+      <x>560</x>
+      <y>10</y>
       <width>111</width>
       <height>31</height>
      </rect>
@@ -53,8 +53,8 @@
    <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
-      <x>590</x>
-      <y>150</y>
+      <x>680</x>
+      <y>10</y>
       <width>111</width>
       <height>31</height>
      </rect>
@@ -66,9 +66,9 @@
    <widget class="QPushButton" name="pushButton_4">
     <property name="geometry">
      <rect>
-      <x>590</x>
-      <y>210</y>
-      <width>111</width>
+      <x>600</x>
+      <y>90</y>
+      <width>161</width>
       <height>31</height>
      </rect>
     </property>
@@ -79,8 +79,8 @@
    <widget class="QPushButton" name="pushButton_5">
     <property name="geometry">
      <rect>
-      <x>590</x>
-      <y>260</y>
+      <x>560</x>
+      <y>50</y>
       <width>111</width>
       <height>31</height>
      </rect>
@@ -92,8 +92,8 @@
    <widget class="QPushButton" name="pushButton_6">
     <property name="geometry">
      <rect>
-      <x>580</x>
-      <y>310</y>
+      <x>680</x>
+      <y>50</y>
       <width>111</width>
       <height>31</height>
      </rect>
@@ -105,9 +105,9 @@
    <widget class="QPushButton" name="pushButton_7">
     <property name="geometry">
      <rect>
-      <x>580</x>
-      <y>360</y>
-      <width>111</width>
+      <x>610</x>
+      <y>170</y>
+      <width>151</width>
       <height>31</height>
      </rect>
     </property>
@@ -118,8 +118,8 @@
    <widget class="QPushButton" name="pushButton_8">
     <property name="geometry">
      <rect>
-      <x>590</x>
-      <y>410</y>
+      <x>630</x>
+      <y>290</y>
       <width>111</width>
       <height>31</height>
      </rect>
@@ -131,8 +131,8 @@
    <widget class="QPushButton" name="pushButton_9">
     <property name="geometry">
      <rect>
-      <x>580</x>
-      <y>460</y>
+      <x>630</x>
+      <y>210</y>
       <width>111</width>
       <height>31</height>
      </rect>
@@ -144,14 +144,144 @@
    <widget class="QPushButton" name="pushButton_10">
     <property name="geometry">
      <rect>
-      <x>580</x>
-      <y>500</y>
+      <x>630</x>
+      <y>250</y>
       <width>111</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
      <string>Звезда 6</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_11">
+    <property name="geometry">
+     <rect>
+      <x>610</x>
+      <y>450</y>
+      <width>161</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Поворот влево</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_12">
+    <property name="geometry">
+     <rect>
+      <x>630</x>
+      <y>510</y>
+      <width>111</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Очистить</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_13">
+    <property name="geometry">
+     <rect>
+      <x>630</x>
+      <y>330</y>
+      <width>111</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Увеличить</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_14">
+    <property name="geometry">
+     <rect>
+      <x>630</x>
+      <y>370</y>
+      <width>111</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Уменьшить</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_15">
+    <property name="geometry">
+     <rect>
+      <x>610</x>
+      <y>410</y>
+      <width>161</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Поворот вправо</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>510</y>
+      <width>85</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>510</y>
+      <width>85</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Square</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>510</y>
+      <width>85</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Perimetr</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>260</x>
+      <y>510</y>
+      <width>85</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>CenterX</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>380</x>
+      <y>510</y>
+      <width>85</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>CenterY</string>
     </property>
    </widget>
   </widget>
